@@ -2,7 +2,7 @@ Index: localedata/locales/wo_SN
 ===================================================================
 --- /dev/null
 +++ localedata/locales/wo_SN
-@@ -0,0 +1,179 @@
+@@ -0,0 +1,180 @@
 +comment_char %
 +escape_char  /
 +%
@@ -96,40 +96,40 @@ Index: localedata/locales/wo_SN
 +END LC_NUMERIC
 +
 +LC_TIME
-+% dibeer (dib), altine (alt), talaata (tal), allarba (all), alxames (alx),
++% dib'eer (dib), altine (alt), talaata (tal), allarba (all), alxames (alx),
 +% ajjuma (ajj), gaawu (gaa)
 +% Sunday, Monday....
 +abday   "<U0064><U0069><U0062>";"<U0061><U006C><U0074>";/
 +        "<U0074><U0061><U006C>";"<U0061><U006C><U006C>";/
 +        "<U0061><U006C><U0078>";"<U0061><U006A><U006A>";/
 +        "<U0067><U0061><U0061>"
-+day     "<U0064><U0069><U0062><U0065><U0065><U0072>";/
++day     "<U0064><U0069><U0062><U0027><U0065><U0065><U0072>";/
 +        "<U0061><U006C><U0074><U0069><U006E><U0065>";/
 +        "<U0074><U0061><U006C><U0061><U0061><U0074><U0061>";/
 +        "<U0061><U006C><U006C><U0061><U0072><U0062><U0061>";/
 +        "<U0061><U006C><U0078><U0061><U006D><U0065><U0073>";/
 +        "<U0061><U006A><U006A><U0075><U006D><U0061>";/
 +        "<U0067><U0061><U0061><U0077><U0075>"
-+% Sanwiy'e,  feebiry'e, mars,  awiril, me,  suwen, sulet,  ut, sattumbar,
-+% oktobar, nowambar, desambar.
++% Sanwiy'e,  feebriy'e, mars,  awril, me,  suwen, sulet,  uut, septaambar,
++% oktoobar, nowaambar, desaambar.
 +abmon   "<U0073><U0061><U006E>";"<U0066><U0065><U0065>";/
-+        "<U006D><U0061><U0072>";"<U0061><U0077><U0069>";/
++        "<U006D><U0061><U0072>";"<U0061><U0077><U0072>";/
 +        "<U006D><U0065><U0020>";"<U0073><U0075><U0077>";/
-+        "<U0073><U0075><U006C>";"<U0075><U0074>";/
-+        "<U0073><U0061><U0074>";"<U006F><U006B><U0074>";/
++        "<U0073><U0075><U006C>";"<U0075><U0075><U0074>";/
++        "<U0073><U0065><U0070>";"<U006F><U006B><U0074>";/
 +        "<U006E><U006F><U0077>";"<U0064><U0065><U0073>"
 +mon     "<U0073><U0061><U006E><U0077><U0069><U0079><U0027><U0065>";/
-+        "<U0066><U0065><U0065><U0062><U0069><U0072><U0079><U0027><U0065>";/
-+        "<U006D><U0061><U0072><U0074>";/
-+        "<U0061><U0077><U0069><U0072><U0069><U006C>";/
++        "<U0066><U0065><U0065><U0062><U0072><U0069><U0079><U0027><U0065>";/
++        "<U006D><U0061><U0072><U0073>";/
++        "<U0061><U0077><U0072><U0069><U006C>";/
 +        "<U006D><U0065>";/
-+        "<U0073><U0075><U0077><U006E><U006E>";/
++        "<U0073><U0075><U0077><U0065><U006E>";/
 +        "<U0073><U0075><U006C><U0065><U0074>";/
-+        "<U0075><U0074>";/
-+        "<U0073><U0061><U0074><U0074><U0075><U006D><U0062><U0061><U0072>";/
-+        "<U006F><U006B><U0074><U006F><U0062><U0061><U0072>";/
-+        "<U006E><U006F><U0077><U0061><U006D><U0062><U0061><U0072>";/
-+        "<U0064><U0065><U0073><U0061><U006D><U0062><U0061><U0072>"
++        "<U0075><U0075><U0074>";/
++        "<U0073><U0065><U0070><U0074><U0061><U0061><U006D><U0062><U0061><U0072>";/
++        "<U006F><U006B><U0074><U006F><U006F><U0062><U0061><U0072>";/
++        "<U006E><U006F><U0077><U0061><U0061><U006D><U0062><U0061><U0072>";/
++        "<U0064><U0065><U0073><U0061><U0061><U006D><U0062><U0061><U0072>"
 +% %a %d %b %Y %T %Z
 +d_t_fmt "<U0025><U0061><U0020><U0025><U0064><U0020><U0025><U0062><U0020><U0025><U0059><U0020><U0025><U0054><U0020><U0025><U005A>"
 +% %d.%m.%Y
@@ -157,7 +157,7 @@ Index: localedata/locales/wo_SN
 +tel_dom_fmt    "<U0025><U0061><U0020><U0025><U006C>"
 +% 221
 +int_prefix     "<U0032><U0032><U0031>"
-+% 00 
++% 00
 +int_select     "<U0030><U0030>"
 +END LC_TELEPHONE
 +
@@ -182,6 +182,7 @@ Index: localedata/locales/wo_SN
 +country_ab3 "<U004D><U0044><U0047>"
 +country_num 450
 +END LC_ADDRESS
++
 Index: localedata/SUPPORTED
 ===================================================================
 --- localedata/SUPPORTED.orig
