@@ -20,6 +20,7 @@ glibc (2.3.6-6) UNRELEASED; urgency=low
   * Add new Galician debconf translation, by Jacobo Tarrio.  (Closes: #361101)
   * Use new features of po-debconf 1.0 to remove unneeded strings from PO
     files.
+  * Fix day, abmon and mon fields for wo_SN locale.  (Closes: #361338)
 
   [ Michael Banck ]
   * Add hurd-machrules-make.diff (fixes build problems with make-3.81 for
